--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,21 @@
     <title>ZolExp</title>
   </head>
   <body class="body">
+    <nav>
+      <ul>
+        <li>
+          <a class="link" href="/">(home)</a>
+        </li>
+        <li>
+          <a class="link" href="/blog">Blog</a>
+        </li>
+      </ul>
+    </nav>
     <p>This is a part from base.html</p>
+
+    {#
+    <div class="tera">{{ __tera_context }}</div>
+    #}
     <main class="main">{% block content %} {% endblock %}</main>
   </body>
 </html>
