Taxonomy in blog section.

--- a/public/main.css
+++ b/public/main.css
@@ -1,1 +1,1 @@
-body{background:#fafac8}
+body{background:#fafac8}.tera{position:fixed;top:40px;right:40px;width:40vw;height:70vh;padding:20px;overflow-y:scroll;color:#9acd32;background:#000;font-size:16px;font-family:monospace}
