--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,17 @@
 body {
   background: rgb(250, 250, 200);
 }
+
+.tera {
+  position: fixed;
+  top: 40px;
+  right: 40px;
+  width: 40vw;
+  height: 70vh;
+  padding: 20px;
+  overflow-y: scroll;
+  color: yellowgreen;
+  background: black;
+  font-size: 16px;
+  font-family: monospace;
+}
