--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,10 @@
     </nav>
     <p>This is a part from base.html</p>
 
-    {#
-    <div class="tera">{{ __tera_context }}</div>
-    #}
     <main class="main">{% block content %} {% endblock %}</main>
+
+    {# tera #}
+    <hr />
+    <div class="tera">{{ __tera_context }}</div>
   </body>
 </html>
