--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,25 @@
 {% extends "base.html" %} {% block content %}
 <h1 class="title">{{ page.title }}</h1>
 <p class="date">le {{ page.date }}</p>
+
+<h2>Tags:</h2>
+<ul>
+  {% for taxonomy_category, taxonomy_values in page.taxonomies %}
+  <li>taxonomy_category = '{{ taxonomy_category }}':</li>
+  {% set taxo = get_taxonomy(kind=taxonomy_category, lang=lang) %}
+  <ul>
+    {% for tag in taxo.items %}
+    <li><a href="{{ tag.permalink }}">{{ tag.name }}</a></li>
+    {% endfor %}
+  </ul>
+  <p>
+    <a href="{{ taxo.permalink }}"
+      >›› All posts with a tag of category '{{ taxonomy_category }}'</a
+    >
+  </p>
+  {% endfor %}
+</ul>
 <div class="content">{{ page.content | safe }}</div>
 
-<p><a href="{{ get_url(path='@/blog/_index.md') }}"><< back to blog</a></p>
+<p><a href="{{ get_url(path='@/blog/_index.md') }}">‹‹ back to blog</a></p>
 {% endblock content %}
