--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@ body {
   overflow-y: scroll;
   color: yellowgreen;
   background: black;
-  font-size: 16px;
+  font-size: 13px;
   font-family: monospace;
+  font-weight: bold;
 }
